# tdetools

./: .cproject  .gitignore  .project  BuildTree.cpp  BuildTree.h  CMakeLists.txt  Classifier.cpp  Classifier.h  ClassifyTrajectory.cpp  ClassifyTrajectory.h  LICENSE  Makefile  README  README.md  TDEModel.cpp  TDEModel.h  Utils.cpp  Utils.h  buildtree  classifytrajectory  models-activities.ini  models.ini  plottrajectory.r  plotwalks.r  run-walks-test.sh
cmake/: FindANN.cmake
data/: amin-train.dat.dmp  bike-2009-03-18.csv  bike.dat.dmp  cosmin-train.dat.dmp  mixed.dat.dmp  robert-train.dat.dmp  run-2009-03-02.csv  run.dat.dmp  sophia-train.dat.dmp  sophia-train.dat.dmp2  stand.dat.dmp  standing-2009-02-27.csv  walk-2009-02-27-1.csv  walk.dat.dmp  walks-test.out
data/.svn/: dir-prop-base  entries
data/.svn/text-base/: bike.dat.svn-base  mixed.dat.svn-base  run.dat.svn-base  stand.dat.svn-base
data/tmp/: classifier-output.csv  classifying-raw.csv  classifying-raw.raw
data/walks/: amin.dat.dmp  classifying-raw.csv  classifying-raw.out  classifying-raw.raw  cosmin.dat.dmp  cosmin.dat~  jordan.dat.dmp  jordan.dat~  maja.dat.dmp  models.ini  rob.dat.dmp  run-walks-test.sh  sophia.dat.dmp  sophia.dat~
